IE fix for search box alignment

--- a/client/www/css/search.css
+++ b/client/www/css/search.css
@@ -10,11 +10,6 @@ GENERAL
 	text-align: center;
 }
 
-#search:before {
-	color: transparent;
-	content: "S";
-}
-
 span.search {
 	display: inline-block; *zoom: 1;
 	position: relative;
